# markdown-viewer

./: .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  AGENTS.md  AUDIT_REPORT.md  AUDIT_REPORT_2026-05-04.md  CHANGELOG.md  LICENSE  PUBLISH_CHECKLIST.md  README.md  SECURITY.md  cov_full.txt  cov_out.txt  package.json  pyproject.toml  test_simple_local.ps1  test_upgrade_scenario.ps1
docs/: CLI_USAGE.md  EXPORT_FEATURES.md  FEATURE_SHOWCASE.md  INSTALLATION.md  QUICK_REFERENCE.md
examples/: COMPREHENSIVE_DEMO.md  EMOJI_DEMO.md  TABLE_BEFORE_TOC.md  TOC_DEMO.md  TOC_USAGE.md  comprehensive.md
markdown_viewer/: __init__.py  __main__.py  app.py  cli.py  favourites_routes.py  routes.py  server.py  setup.py
markdown_viewer/db/: __init__.py  database.py  favourites_repo.py
markdown_viewer/electron/: check_cov.py  main.js  package.json  preload.js
markdown_viewer/electron/renderer/: index.html
markdown_viewer/electron/renderer/scripts/: api.js  app.js  browser-shim.js  favourites.js  legacy-check.js  renderer.js
markdown_viewer/electron/renderer/styles/: favourites.css  main.css
markdown_viewer/exporters/: __init__.py  pdf_exporter.py  word_exporter.py
markdown_viewer/processors/: __init__.py  markdown_processor.py
markdown_viewer/translators/: __init__.py  content_translator.py
markdown_viewer/utils/: file_handler.py
scripts/: install.bat  install.sh  setup_electron.py  sync_renderer_vendor.py
tests/: conftest.py  test_app_factory.py  test_cli.py  test_cli_simple.py  test_database_coverage.py  test_db_database.py  test_exporters.py  test_favourites_repo.py  test_favourites_routes.py  test_favourites_routes_coverage.py  test_file_handler.py  test_main_entry.py  test_pdf_exporter.py  test_processor.py  test_renderer_vendor.py  test_routes.py  test_server.py  test_setup_module.py  test_translator.py  test_word_export_port_fix.py  test_word_exporter_advanced.py
tests/integration/: __init__.py  test_favourites_workflow.py  test_render_workflow.py  test_security_integration.py  test_translate_workflow.py
tests/regression/: __init__.py  test_known_regressions.py
